...
            announceMessages(account.id, showPreview)
        }
        return if (retryNeeded) Result.retry() else Result.success()
    }

    private suspend fun announceMessages(accountId: String, showPreview: Boolean) {
        val messages = dao.getUnannouncedMessages(accountId)
        if (messages.isEmpty()) return
        if (ContextCompat.checkSelfPermission(applicationContext, Manifest.permission.POST_NOTIFICATIONS) !=
            PackageManager.PERMISSION_GRANTED
        ) {
            dao.markMessagesLocallyNotified(accountId, messages.map { it.messageId })
            return
...
